# api-sdk

./: .gitattributes  .gitignore  LICENSE  MERGE_PLAN.md  README copy.md  README.md  TEST_FINAL_SUMMARY_v1.0.5.md  final_checking_task_list.md  llms.txt  package-lock.json  package.json  sdk-client-init-review.md  sdk-design-review.md  test_documentai_imbrace.py
.github/workflows/: deploy-docs.yml  publish-py-pypi.yml  (+1 more)
.husky/: pre-push
docs/: PROJECT_SUMMARY.md  SDK_OVERVIEW.md  SETUP_GUIDE.md  document.md  document_en.md  document_vn.md  documentai-e2e-test-2026-05-08.md  refactor-report-2026-05-08.md
py/: .env.example  README.md  pyproject.toml
scripts/: audit-sdk-gaps.mjs  generate-llms-md.mjs  probe-full-flow.mjs
test-local-pkg/: bug-test-all.md  report-full-flow-guide.md
test-local-pkg/py/: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt  test_regression_v1_0_5.py  utils.py
test-local-pkg/py/tests/: test_activepieces.py  test_ai_agent.py  test_ai_extended.py  test_all.py  test_async.py  test_boards.py  test_campaign.py  test_channel.py  test_chat_ai.py  test_crm.py  test_file_service.py  test_full_flow_guide.py  test_marketplace.py  test_misc.py  test_multimedia_ai.py  test_platform.py  test_settings.py
test-local-pkg/py/utils/: utils.py
test-npm-pip-pkg/: report-full-flow-guide.md
ts/: .env.example  README.md  imbrace-sdk-1.0.0.tgz  imbrace-sdk-1.0.1.tgz  imbrace-sdk-1.0.3.tgz  package-lock.json  package.json  smoke-test.ts  test-ci.ts  tsconfig.json
website/: astro.config.mjs  package-lock.json  package.json
(+798 files in other folders)
